--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@ import { SITE_TITLE } from '../consts';
 	<div class="header-container">
 		<div class="logo-container">
 			<a href="/" class="logo">
-				<span class="logo-text">{SITE_TITLE}</span>
+				<span class="logo-text">AAS Transportes</span>
 			</a>
 		</div>
 		
